--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <li><img src="imgs/thumb3.png" onclick="imgSlider('imgs/img3.png'); changeCircleColor('#d752b1')" alt=""></li>
             </ul>
             <ul class="sci">
-                <li><a href="https://www.facebook.com/Starbucks/" target="_blank"><img src="imgs/facebook.png" alt=""></a></li>
-                <li><a href="https://twitter.com/Starbucks" target="_blank"><img src="imgs/twitter.png" alt=""></a></li>
-                <li><a href="https://www.instagram.com/starbucks/" target="_blank"><img src="imgs/instagram.png" alt=""></a></li>
+                <li><a href="https://www.facebook.com/Starbucks/" ><img src="imgs/facebook.png" alt=""></a></li>
+                <li><a href="https://twitter.com/Starbucks"><img src="imgs/twitter.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/starbucks/"><img src="imgs/instagram.png" alt=""></a></li>
             </ul>
     </section>
 
